# meganeura

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_meganeura.rs  bench_pytorch.py  bench_sd_unet_train.rs  bench_sd_unet_train_pytorch.py  bench_smolvla_meganeura.rs  bench_smolvla_pytorch.py  bench_smolvla_train.rs  bench_smolvla_train_pytorch.py  compare.sh  ensure_venv.sh  grad_check.rs  grad_check_pytorch.py  sd_unet_train_pytorch.py
bench/results/: smolvla_meganeura.json  smolvla_pytorch.json  smolvla_train_meganeura.json
docs/: kv-cache-plan.md  naga-optimization-plan.md  plan-epilogue-fusion.md  plan-flash-attention.md  plan-kv-cache.md
examples/: diffusion.rs  huggingface.rs  mnist.rs  resnet.rs  sd_unet_train.rs  smollm2.rs  smolvlm2.rs  whisper.rs
scripts/: gen_reference.py
shaders/: bias_add.wgsl  binary.wgsl  cross_entropy.wgsl  matmul.wgsl  matmul_bias_relu.wgsl  matmul_relu.wgsl  reduce.wgsl  sgd.wgsl  softmax.wgsl  transpose.wgsl  unary.wgsl
src/: autodiff.rs  cache.rs  codegen.rs  compile.rs  graph.rs  lib.rs  nn.rs  optimize.rs  profiler.rs  runtime.rs  train.rs
src/data/: mnist.rs  mod.rs  safetensors.rs
src/load/: onnx.rs
src/models/: mistral.rs  mod.rs  resnet.rs  sd_unet.rs  smollm2.rs  smolvla.rs  smolvlm2.rs  whisper.rs
src/shaders/: attention.wgsl  bce.wgsl  cache_write.wgsl  cached_attention.wgsl  concat.wgsl  conv2d.wgsl  conv2d_gemm.wgsl  conv2d_gemm_small.wgsl  conv2d_grad_input.wgsl  conv2d_grad_input_gemm.wgsl  conv2d_grad_input_gemm_coop.wgsl  conv2d_grad_input_gemm_small.wgsl  conv2d_grad_weight.wgsl  conv2d_grad_weight_gemm.wgsl  conv2d_grad_weight_gemm_small.wgsl  group_norm.wgsl  group_norm_grad.wgsl  group_norm_silu.wgsl  layer_norm_grad.wgsl  matmul.wgsl  matmul_coop.wgsl  matmul_rms_norm.wgsl  matmul_rms_norm_coop.wgsl  matmul_small.wgsl  mha_forward.wgsl  mha_grad_k.wgsl  mha_grad_q.wgsl  mha_grad_v.wgsl  rms_norm_grad.wgsl  rms_norm_rsqrt.wgsl  rope_dynamic.wgsl  scatter_add.wgsl  sliding_window_attention.wgsl  softmax.wgsl  split.wgsl  swiglu_concat.wgsl  unary.wgsl  upsample.wgsl  upsample_grad.wgsl  winograd_input_transform.wgsl  (+2 more)
tests/: cache_inference.rs  gpu_smoke.rs  resnet_correctness.rs  smollm2_correctness.rs  training_correctness.rs  vision_ops_smoke.rs  whisper_correctness.rs
