[package]
name = "meganeura"
version = "0.1.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/meganeura"
categories = ["science"]
edition = "2024"
rust-version = "1.88"
description = "E-graph optimized neural network training on blade-graphics"
license = "MIT"

[dependencies]
blade-graphics = { git = "https://github.com/kvark/blade.git", rev = "c68ad15339d754f234f3bcc845f41fea55617b39" }
blade-macros = { git = "https://github.com/kvark/blade.git", rev = "c68ad15339d754f234f3bcc845f41fea55617b39" }
egglog = "2.0"
bytemuck = { version = "1", features = ["derive"] }
naga = { version = "29", features = ["wgsl-out"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
safetensors = "0.4"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "diffusion"
path = "examples/diffusion.rs"

[[example]]
name = "huggingface"
path = "examples/huggingface.rs"

[[example]]
name = "smollm2"
path = "examples/smollm2.rs"

[[example]]
name = "smolvlm2"
path = "examples/smolvlm2.rs"

[[example]]
name = "bench_meganeura"
path = "bench/bench_meganeura.rs"

[[example]]
name = "bench_smolvla_meganeura"
path = "bench/bench_smolvla_meganeura.rs"
