[package]
name = "meganeura"
version = "0.1.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/meganeura"
categories = ["science"]
edition = "2024"
rust-version = "1.88"
description = "E-graph optimized neural network training on Blade"
license = "MIT"

[dependencies]
blade-graphics = { version = "0.8.1" }
blade-macros = { version = "0.3" }
egglog = "2.0"
bytemuck = { version = "1", features = ["derive"] }
naga = { version = "29", features = ["wgsl-in", "wgsl-out"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
safetensors = "0.4"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "diffusion"
path = "examples/diffusion.rs"

[[example]]
name = "huggingface"
path = "examples/huggingface.rs"

[[example]]
name = "smollm2"
path = "examples/smollm2.rs"

[[example]]
name = "smolvlm2"
path = "examples/smolvlm2.rs"

[[example]]
name = "sd_unet_train"
path = "examples/sd_unet_train.rs"

[[example]]
name = "bench_sd_unet_train"
path = "bench/bench_sd_unet_train.rs"

[[example]]
name = "bench_meganeura"
path = "bench/bench_meganeura.rs"

[[example]]
name = "bench_smolvla_meganeura"
path = "bench/bench_smolvla_meganeura.rs"

[[example]]
name = "bench_smolvla_train"
path = "bench/bench_smolvla_train.rs"

[[example]]
name = "grad_check"
path = "bench/grad_check.rs"
