[package]
name = "meganeura"
version = "0.2.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/meganeura"
categories = ["science"]
edition = "2024"
rust-version = "1.88"
description = "E-graph optimized neural network training on Blade"
license = "MIT"

[dependencies]
blade-graphics = { git = "https://github.com/kvark/blade", rev = "efe86c6f17467452583b37a044abd179d85e0eb7" }
blade-macros = { git = "https://github.com/kvark/blade", rev = "efe86c6f17467452583b37a044abd179d85e0eb7" }
egglog = "2.0"
bytemuck = { version = "1", features = ["derive"] }
naga = { version = "29", features = ["wgsl-in", "wgsl-out"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
safetensors = "0.4"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
oxionnx-core = "0.1"
oxionnx-proto = "0.1"
half = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "diffusion"
path = "examples/diffusion.rs"

[[example]]
name = "huggingface"
path = "examples/huggingface.rs"

[[example]]
name = "smollm2"
path = "examples/smollm2.rs"

[[example]]
name = "smolvlm2"
path = "examples/smolvlm2.rs"

[[example]]
name = "sd_unet_train"
path = "examples/sd_unet_train.rs"

[[example]]
name = "bench_sd_unet_train"
path = "bench/bench_sd_unet_train.rs"

[[example]]
name = "bench_meganeura"
path = "bench/bench_meganeura.rs"

[[example]]
name = "bench_smolvla_meganeura"
path = "bench/bench_smolvla_meganeura.rs"

[[example]]
name = "bench_smolvla_train"
path = "bench/bench_smolvla_train.rs"

[[example]]
name = "onnx_compare"
path = "examples/onnx_compare.rs"

[[example]]
name = "resnet"
path = "examples/resnet.rs"

[[example]]
name = "whisper"
path = "examples/whisper.rs"

[[example]]
name = "bench_ci_latency"
path = "bench/bench_ci_latency.rs"

[[example]]
name = "grad_check"
path = "bench/grad_check.rs"
